<resources>
    <string name="app_name">Registration&amp;Login</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="create_a_new_acount">Create a New Acount</string>
    <string name="email">Email</string>
    <string name="enter_your_birth_date">Enter your birth date</string>
    <string name="phone_number">Phone_number</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in </string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="jan_01_2020">JAN 01 2020</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="enter_password">Enter Password</string>
    <string name="submit">submit</string>
    <string name="enter_date_of_birth">enter date of birth</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign up</string>


</resources>